--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ p {
 	letter-spacing: initial;
 }
 #header .nav-list ul li:hover a {
-	color: crimson;
+	color: orange;
 }
 #header .hamburger {
 	height: 60px;
@@ -248,7 +248,7 @@ p {
 	left: 0;
 	height: 100%;
 	width: 0;
-	background-color: crimson;
+	background-color: orange;
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
