--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ a {
 	align-items: center;
 	justify-content: center;
 }
+.logo img{
+	max-width: 100%;
+	width: 200px;
+	height: auto;
+}
 img {
 	height: 100%;
 	width: 100%;
